--- a/src/Views/Fenlei/Item/item.scss
+++ b/src/Views/Fenlei/Item/item.scss
@@ -35,6 +35,7 @@
     }
     div{
         margin: 0 0.1rem 0 0.22rem;
+        overflow: hidden;
         // background: yellow;
         div{
             margin-left: -0.09rem;
