--- a/src/Components/Tabbar/Tabbar.css
+++ b/src/Components/Tabbar/Tabbar.css
@@ -1,6 +1,6 @@
 .tabbar_index {
-    height:.65rem;
-    background: #eee;
+    height:.5rem;
+    background: #fff;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -12,10 +12,10 @@
     text-align: center;
     color: #666666!important;
     font-size: .12rem;
-    margin-top: .05rem;
+    /* margin-top: .05rem; */
 }
 .tabbar_icon{
-    font-size: .25rem;
+    font-size: .2rem;
 }
 .tabbar_color{
     color: red!important;
