--- a/src/Views/List/list.scss
+++ b/src/Views/List/list.scss
@@ -137,6 +137,7 @@
         display: flex;
     img{
         width:1.3rem;
+        height:1.3rem;
         padding-bottom: 0.05rem;
         float: left;
         
