--- a/src/Views/Ismy/Huashenghuiyuan/Huashenghuiyuan.css
+++ b/src/Views/Ismy/Huashenghuiyuan/Huashenghuiyuan.css
@@ -28,6 +28,7 @@
     line-height: .52rem;
     border-bottom: .01rem solid #d1d1d1;
     margin: 0 .15rem;
+    width: 3.42rem;
 }
 
 .member_nav_l {
